# e5renewer

./: .gitignore  CONTRIBUTING.md  README.md  config.json.example  e5renewer.service  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  test.yaml
e5renewer/: __init__.py  __main__.py
e5renewer/config/: __init__.py  _base.py  _config.py  _json.py  _parser.py  _toml.py  _user.py  _yaml.py
e5renewer/defines/: __init__.py  _deserializable.py
e5renewer/logger/: __init__.py
e5renewer/network/: __init__.py  _auth.py
e5renewer/processor/: __init__.py
e5renewer/processor/msapis/: __init__.py  _caller.py  _get.py  _random.py
e5renewer/processor/statistic/: __init__.py  _manage.py  _method.py
e5renewer/sdk/: __init__.py  _module.py  _semver.py
tests/: conftest.py  test_auth.py  test_config.py  test_config_parser.py  test_deserializable.py  test_init.py  test_json_parser.py  test_logger.py  test_module.py  test_network.py  test_parse_arguments.py  test_processor.py  test_random_api_caller.py  test_semver.py  test_statistic.py  test_toml_parser.py  test_yaml_parser.py
